Backend Added the interface to get user information.
